<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">litterBox</string>
    <string name="title_activity_litter_box">LitterBox</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_attribute">Add New Attribute</string>
    <string name="action_add_class">Add New Class</string>
    <string name="title_activity_maintain_entities">Maintain Entities</string>
    <string name="title_activity_maintain_classes">Maintain Classes</string>
    <string name="title_activity_maintain_attributes">Maintain Attributes</string>
    <string name="activity_attribute_label">Attribute ID:</string>
    <string name="activity_attribute_description">Description:</string>
    <string name="activity_attribute_type_label">Type:</string>
    <string name="activity_class_label">Class ID:</string>
    <string name="save_button_label">Save</string>
    <string name="add_class_label">Add Class:</string>
    <string name="add_attribute_label">Add Attribute:</string>
    <string name="add_new_attribute_value">Add New Attribute Value</string>
    <string name="add_new_class">Add Class to Class</string>
    <string name="add_new_attribute">Add Attribute to Class</string>
    <string name="title_activity_add_attribute">Add Attribute</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_add_class">Add Class</string>
    <string name="action_view_entities">View/Search Entities</string>
    <string name="action_view_classes">View/Search Classes</string>
    <string name="action_view_attributes">View/Search Attributes</string>
    <string name="action_edit_entities">Edit Entities</string>
    <string name="action_edit_classes">Edit Classes</string>
    <string name="action_edit_attributes">Edit Attributes</string>
    <string name="action_add_entities">Add Entities</string>
    <string name="action_add_classes">Add Classes</string>
    <string name="action_add_attributes">Add Attributes</string>
    <string name="summaryUserName">User Name</string>
    <string name="titleUserName">User Name</string>
    <string name="title_activity_view_entities">ViewEntities</string>
    <string name="title_activity_add_entities">AddEntities</string>
    <string name="title_activity_view_attributes">ViewAttributes</string>
    <string name="title_activity_view_classes">ViewClasses</string>
    <string name="placeholder">***************</string>
    <string name="ma_attribute_id_label">Attribute</string>
    <string name="ma_attribute_desc_hint">Enter description for the new attribute</string>
    <string name="ma_attribute_desc_label">Description</string>
    <string name="ma_attribute_type_label">Attribute Type</string>
    <string name="ma_attribute_value_label">Value</string>
    <string name="ma_attribute_value_hint">Enter a value for this attribute</string>
    <string name="mc_class_id_label">Class</string>
    <string name="mc_class_desc_hint">Enter a description for the new class</string>
    <string name="mc_class_desc_label">Description</string>
    <string name="mc_class_category_label">Category</string>
    <string name="mc_class_add_attribute_hint">Label for this attribute/class</string>
    <string name="mc_class_add_class_label">Sub-Class</string>
    <string name="mc_class_add_attribute_label">Attribute</string>
    <string name="mc_button_add_class_label">Add Sub-class</string>
    <string name="mc_button_add_attribute_label">Add Attribute</string>
    <string name="button_add_label">Add</string>
    <string name="button_update_label">Update</string>
    <string name="button_remove_label">Remove</string>

</resources>