<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/mcClassDesc2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mc_class_id_label" />

    <TextView
        android:id="@+id/mcClassDescShow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/mcAddDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/mc_class_add_attribute_hint" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/mcAddClassLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mc_class_add_class_label" />

    <Spinner
        android:id="@+id/mcAddClass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/mcAddClassButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mc_button_add_class_label" />

    <TextView
        android:id="@+id/mcAddAttributeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mc_class_add_attribute_label" />

    <Spinner
        android:id="@+id/mcAddAttribute"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/mcAddAttributeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mc_button_add_attribute_label" />

    <ListView
        android:id="@+id/mcAttributeList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

</LinearLayout>