<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/mcClassLabel1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mc_class_id_label" />

    <Spinner
        android:id="@+id/mcClassID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/mcClassDescLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mc_class_desc_label" />

    <EditText
        android:id="@+id/mcClassDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/mc_class_desc_hint" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/mcClassCategoryLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mc_class_category_label" />

    <Spinner
        android:id="@+id/mcCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/mcButton1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_add_label" />

</LinearLayout>