<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EditAttributes" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_class_label" />

    <Spinner
        android:id="@+id/lstMaintainClassID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/txtClassAttributeLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight=".2"
            android:text="@string/add_class_label" />

        <Spinner
            android:id="@+id/lstClassAddClassID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".8" />

    </LinearLayout>

    <Button
        android:id="@+id/btnAddClassSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_new_class" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight=".2"
            android:text="@string/add_attribute_label" />

        <Spinner
            android:id="@+id/lstClassAddAttributeID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".8" />

    </LinearLayout>

    <requestFocus />

    <Button
        android:id="@+id/btnAddAttribute"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_new_attribute" />

    <ListView
        android:id="@+id/lstClassAttributes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

</LinearLayout>